# AtlasDB

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: ci.yml
cmake/: CompilerWarnings.cmake  Sanitizers.cmake
docs/: architecture.md  query-execution.md  storage-format.md  testing.md
include/atlasdb/: database.hpp  version.hpp
include/atlasdb/btree/: cursor.hpp  index.hpp  internal_node.hpp  leaf_node.hpp
include/atlasdb/catalog/: memory_catalog.hpp
include/atlasdb/parser/: ast.hpp  parser.hpp
include/atlasdb/planner/: rule_planner.hpp
include/atlasdb/storage/: file_header.hpp  page.hpp  pager.hpp  row_codec.hpp  row_page.hpp  table_store.hpp
src/btree/: cursor.cpp  index.cpp  internal_node.cpp  leaf_node.cpp
src/catalog/: memory_catalog.cpp
src/cli/: main.cpp
src/core/: database.cpp
src/parser/: parser.cpp
src/planner/: rule_planner.cpp
src/storage/: file_header.cpp  page.cpp  pager.cpp  row_codec.cpp  row_page.cpp  table_store.cpp
tests/: CMakeLists.txt
tests/integration/: primary_index_integration_test.cpp
tests/unit/: btree_cursor_test.cpp  btree_index_test.cpp  btree_internal_node_test.cpp  btree_leaf_node_test.cpp  memory_catalog_test.cpp  parser_test.cpp  rule_planner_test.cpp  smoke_test.cpp  storage_file_header_test.cpp  storage_pager_test.cpp  storage_row_codec_test.cpp  storage_row_page_test.cpp  storage_table_store_test.cpp
